# nexora

./: .dockerignore  .env.example  .gitignore  AGENT_CENTER_VERIFICATION_REPORT.md  ANDROID_BUILD_FIX_REPORT.md  ANDROID_BUILD_REPORT.md  API_AUDIT.md  ARCHITECTURE_REPORT.md  ARCHITECTURE_REPORT_V2.md  ARCHITECTURE_VERIFICATION.md  AUTH_AUDIT_REPORT.md  BACKEND_GAP_CLOSURE_REPORT.md  BACKEND_GAP_REPORT.md  BACKEND_P1_CLOSURE_REPORT.md  BACKEND_RELEASE_REPORT.md  BUG_AUDIT_REPORT.md  BUG_FIX_REPORT.md  CODEBASE_CLEANUP.md  CONTROL_CENTER_E2E_AUDIT_REPORT.md  CONVERSATIONS_VERIFICATION_REPORT.md  CUSTOMERS_VERIFICATION_REPORT.md  DATABASE_OPTIMIZATION_REPORT.md  DESIGN_SYSTEM_AUDIT.md  Dockerfile  Dockerfile.production  E2E_RELEASE_REPORT.md  END_TO_END_TEST_REPORT.md  FINAL_E2E_VERIFICATION_REPORT.md  FINAL_PLATFORM_STATUS.md  FINAL_PRODUCTION_CHECKLIST.md  FINAL_RELEASE_REPORT.md  FINAL_VERIFICATION_REPORT.md  FLUTTER_RELEASE_REPORT.md  FOUNDATION_ROADMAP.md  FOUNDATION_VERIFICATION_REPORT.md  FRONTEND_BACKEND_CONTRACT_REPORT.md  IMPLEMENTATION_REALITY_AUDIT.md  KNOWLEDGE_BASE_VERIFICATION_REPORT.md  LEADS_VERIFICATION_REPORT.md  MASTER_COMPLETION_REPORT.md  (+49 more)
NEXORA AGENTS/nexora_ai/: .coverage  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  MEMORY_GUIDE.md  MODULES.md  PLUGIN_GUIDE.md  README.md  ROADMAP.md  TESTING_GUIDE.md  TOOL_GUIDE.md  pyproject.toml
NEXORA AGENTS/nexora_ai/nexora_ai/application/: __init__.py
NEXORA AGENTS/nexora_ai/nexora_ai/application/di/: container.py
NEXORA AGENTS/nexora_ai/nexora_ai/application/services/: __init__.py  context_service.py  conversation_service.py  memory_service.py  planning_service.py  retry_service.py
NEXORA AGENTS/nexora_ai/nexora_ai/application/use_cases/: __init__.py  admin_usecases.py  automation_usecases.py  conversation_usecases.py  memory_usecases.py  planning_usecases.py  tool_usecases.py
NEXORA AGENTS/nexora_ai/nexora_ai/domain/entities/: __init__.py  agent.py  auth.py  automation.py  configuration.py  conversation.py  event.py  logging.py  memory.py  planner.py  plugin.py  runtime.py  security.py  tool.py
NEXORA AGENTS/nexora_ai/nexora_ai/domain/enums/: __init__.py  agent_enums.py  auth_enums.py  automation_enums.py  conversation_enums.py  event_enums.py  logging_enums.py  memory_enums.py  planner_enums.py  plugin_enums.py  provider_enums.py  security_enums.py  tool_enums.py
NEXORA AGENTS/nexora_ai/nexora_ai/domain/exceptions/: __init__.py
NEXORA AGENTS/nexora_ai/nexora_ai/domain/interfaces/: __init__.py  agent_interface.py  auth_interface.py  automation_interface.py  config_interface.py  conversation_interface.py  event_bus_interface.py  logging_interface.py  memory_interface.py  planner_interface.py  plugin_interface.py  provider_interface.py  runtime_interface.py  sandbox_interface.py  screen_interface.py  security_interface.py  tool_interface.py
NEXORA AGENTS/nexora_ai/nexora_ai/infrastructure/: provider_config_service.py  provider_router.py
NEXORA AGENTS/nexora_ai/nexora_ai/infrastructure/agent_client/: __init__.py  registration_client.py
NEXORA AGENTS/nexora_ai/nexora_ai/infrastructure/agent_manager/: __init__.py  agent_manager.py
NEXORA AGENTS/nexora_ai/nexora_ai/infrastructure/auth/: __init__.py  auth_client.py
NEXORA AGENTS/nexora_ai/nexora_ai/infrastructure/automation/: __init__.py  automation_engine.py
NEXORA AGENTS/nexora_ai/nexora_ai/infrastructure/config/: __init__.py  config_manager.py  encryptor.py
NEXORA AGENTS/nexora_ai/nexora_ai/infrastructure/event_bus/: __init__.py  event_bus.py
NEXORA AGENTS/nexora_ai/nexora_ai/infrastructure/logging/: __init__.py  json_logger.py
NEXORA AGENTS/nexora_ai/nexora_ai/infrastructure/memory/: __init__.py  json_backend.py  memory_manager.py  sqlite_backend.py  vector_backend.py
NEXORA AGENTS/nexora_ai/nexora_ai/infrastructure/plugin_sdk/: __init__.py  plugin_loader.py
NEXORA AGENTS/nexora_ai/nexora_ai/infrastructure/providers/: __init__.py  anthropic.py  base.py  deepseek.py  factory.py  gemini.py  glm.py  groq.py  lm_studio.py  mistral.py  mock.py  ollama.py  openai.py  openai_compatible.py  openrouter.py
NEXORA AGENTS/nexora_ai/nexora_ai/infrastructure/runtime/: __init__.py  ai_runtime.py
NEXORA AGENTS/nexora_ai/nexora_ai/infrastructure/screen/: __init__.py  windows_capture.py
NEXORA AGENTS/nexora_ai/nexora_ai/infrastructure/security/: __init__.py  audit.py  permission_manager.py  sandbox.py
NEXORA AGENTS/nexora_ai/nexora_ai/infrastructure/tools/: __init__.py  browser_tool.py  clipboard_tool.py  desktop_tool.py  email_tool.py  filesystem_tool.py  http_tool.py  (+4 more)
NEXORA AGENTS/nexora_ai/tests/: conftest.py
NEXORA AGENTS/nexora_ai/tests/contract/: test_provider_contract.py
NEXORA AGENTS/nexora_ai/tests/integration/: test_event_bus_workflow.py  test_runtime_lifecycle.py  test_sqlite_memory.py
NEXORA AGENTS/nexora_ai/tests/mocks/: __init__.py  mock_config.py  mock_event_bus.py  mock_memory.py  mock_provider.py  mock_runtime.py
NEXORA AGENTS/nexora_ai/tests/unit/: test_automation_engine.py  test_config_manager.py  test_conversation_usecases.py  test_di_container.py  test_event_bus.py  test_glm_adapter.py  test_json_logger.py  test_memory_manager.py  test_permission_manager.py  test_planning_service.py  test_plugin_loader.py  test_provider_router.py  test_retry_service.py  test_tool_registry.py
(+991 files in other folders)
