[tool.poetry]
name = "nexora-brain"
version = "0.1.0"
description = "Nexora Brain: Central intelligence layer for WhatsApp & Voice Calling Agents"
authors = ["Nexora Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.110.0"
uvicorn = {extras = ["standard"], version = ">=0.28.0"}
pydantic = ">=2.6.4"
pydantic-settings = ">=2.2.1"
sqlalchemy = ">=2.0.28"
asyncpg = ">=0.30.0"
alembic = ">=1.13.1"
structlog = ">=24.1.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
bcrypt = ">=4.1.2"
redis = ">=5.0.3"
qdrant-client = {version = ">=1.8.0", optional = true}
pypdf = ">=4.1.0"
python-docx = ">=1.1.0"
python-multipart = ">=0.0.9"
sentence-transformers = {version = ">=2.5.1", optional = true}
email-validator = ">=2.1.0"
psutil = ">=6.0.0"

# Metrics & Observability
prometheus-client = ">=0.20.0"

# OpenTelemetry
opentelemetry-api = ">=1.24.0"
opentelemetry-sdk = ">=1.24.0"
opentelemetry-instrumentation-fastapi = ">=0.45b0"
opentelemetry-instrumentation-sqlalchemy = ">=0.45b0"
opentelemetry-instrumentation-httpx = ">=0.45b0"
opentelemetry-instrumentation-redis = ">=0.45b0"
opentelemetry-instrumentation-logging = ">=0.45b0"
opentelemetry-exporter-otlp-proto-grpc = ">=1.24.0"

[tool.poetry.extras]
ai = ["sentence-transformers", "qdrant-client"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.1.1"
pytest-asyncio = ">=0.23.5"
httpx = ">=0.27.0"
black = ">=24.2.0"
isort = ">=5.13.2"
ruff = ">=0.3.0"
flake8 = ">=7.0.0"
mypy = ">=1.9.0"
bandit = ">=1.7.8"
safety = ">=3.2.0"
pytest-cov = ">=4.1.0"
pip-audit = ">=2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["alembic", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "PTH", "ERA"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["alembic", ".venv"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/alembic/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests",
]
